--- a/style.css
+++ b/style.css
@@ -54,4 +54,18 @@ nav {
 .shape_line {
   display: inline-block;
   margin-left: 180px;
+  margin-bottom: 15px;
+}
+
+.ellipse {
+  width: 108px;
+  height: 96px;
+  background-color: #008081;
+  border-radius: 50%;
+  border: 4px solid black;
+}
+
+.shape_ellipse {
+  display: inline-block;
+  margin-left: 35px;
 }
