--- a/style.css
+++ b/style.css
@@ -4,85 +4,154 @@
   box-sizing: border-box;
 }
 
-body {
+body,
+html {
   background-color: #008001;
-  margin: 0px;
+  margin: 0;
+  padding: 0;
 }
 
-nav {
+.nav {
   background-color: #7f8000;
   width: 100%;
   height: 134px;
-  border: 8px solid black;
+  border: 8px solid #000;
+  margin-bottom: 145px;
 }
 
-.first_square {
-  width: 176px;
-  height: 176px;
-  background-color: #fe0000;
-  border: 6px solid;
-  transform: rotate(45deg);
-  margin-left: 200px;
-  margin-top: 162px;
-  display: inline-block;
+.container {
+  max-width: 100%;
+  width: 900px;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.second_square {
-  width: 176px;
-  height: 176px;
-  background-color: #fe0000;
-  border: 6px solid;
-  transform: rotate(45deg);
-  margin-left: 32px;
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
-.first_line {
-  width: 124px;
-  height: 12px;
-  background-color: #0003f5;
-  border: 4px solid black;
-  margin-bottom: 35px;
+.holder {
+  float: left;
 }
 
-.second_line {
-  width: 124px;
-  height: 12px;
-  background-color: #0003f5;
-  border: 4px solid black;
+.holder--smallerFigures {
+  width: calc(100% - 204px);
 }
 
-.shape_line {
-  display: inline-block;
-  margin-left: 180px;
-  margin-bottom: 15px;
-}
-
-.ellipse {
-  width: 108px;
-  height: 96px;
-  background-color: #008081;
-  border-radius: 50%;
-  border: 4px solid black;
-}
-
-.shape_ellipse {
-  display: inline-block;
-  margin-left: 35px;
-}
-
-.rectangle {
-  width: 204px;
-  height: 460px;
-  background-color: white;
+.holder--sidebar {
+  background-color: #fff;
   border: 4px solid black;
   font-size: 38px;
   text-align: center;
   letter-spacing: 5px;
   font-weight: 700;
+  width: 204px;
+  height: 460px;
+  margin-bottom: 30px;
 }
 
-.shape_rectangle {
+.holder__squares {
+  float: left;
+}
+
+.square {
+  width: 130px;
+  height: 130px;
+  display: inline-block;
+  vertical-align: top;
+  background-color: #fe0000;
+  border: 6px solid;
+}
+
+.square--lower {
+  transform: translateY(80px) rotate(45deg);
+}
+
+.square--upper {
+  transform: translateY(-80px) rotate(45deg);
+  margin-left: 30px;
+}
+
+.holder__figures {
   float: right;
-  margin-top: 180px;
-  margin-right: 25px;
+  width: 290px;
+  margin-right: 30px;
+}
+
+.holder__lines {
+  float: left;
+}
+
+.line {
+  width: 124px;
+  height: 12px;
+  background-color: #0003f5;
+  border: 4px solid #000;
+}
+
+.line--upper {
+  margin-bottom: 35px;
+  margin-top: 18px;
+}
+
+.ellipse {
+  float: right;
+  width: 108px;
+  height: 96px;
+  background-color: #008081;
+  border-radius: 50%;
+  border: 4px solid #000;
+}
+
+@media screen and (min-width: 583px) {
+  .holder--sidebar {
+    transform: translateY(-40px);
+  }
+}
+
+@media screen and (min-width: 583px) and (max-width: 900px) {
+  .holder--sidebar {
+    background-color: #c73737;
+  }
+}
+
+@media screen and (max-width: 582px) {
+  .holder--sidebar {
+    background-color: #0000fe;
+  }
+  .holder--smallerFigures {
+    width: 100%;
+    float: none;
+  }
+  .holder--sidebar {
+    float: none;
+  }
+  .square {
+    width: 100px;
+    height: 100px;
+  }
+  .square--lower {
+    transform: translateY(60px) rotate(45deg);
+  }
+
+  .square--upper {
+    transform: translateY(-60px) rotate(45deg);
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .holder__squares {
+    float: none;
+    margin-left: 30px;
+  }
+  .holder__figures {
+    margin-top: 120px;
+    margin-bottom: 30px;
+    float: none;
+  }
 }
